--- a/branches/0_12_3/pioneers/ChangeLog
+++ b/branches/0_12_3/pioneers/ChangeLog
@@ -1,3 +1,9 @@
+2010-09-26  Roland Clobus <rclobus@rclobus.nl>
+	* configure.ac: Release 0.12.3.1
+	* common/gtk/gtkbugs.c, common/gtk/guimap.c, client/gtk/histogram.c:
+	Build with Gtk+-2.20
+	* Released 0.12.3.1 (Translation update)
+
 2009-11-04  Roland Clobus <rclobus@bigfoot.com>
 	* Released 0.12.3
 
