--- a/branches/0_12_3/pioneers/po/cs.po
+++ b/branches/0_12_3/pioneers/po/cs.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Pioneers 0.12.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-09-26 10:18+0200\n"
+"POT-Creation-Date: 2010-09-27 08:02+0200\n"
 "PO-Revision-Date: 2010-03-28 01:29+0000\n"
 "Last-Translator: Ladislav Dobias <Unknown>\n"
 "Language-Team: \n"
@@ -719,7 +719,7 @@ msgstr "%s odstranil most.\n"
 
 #: ../client/common/player.c:673
 #, c-format
-msgid "%s has cancelled a ship's movement.\n"
+msgid "%s has canceled a ship's movement.\n"
 msgstr "%s zrušil pohyb lodi.\n"
 
 #: ../client/common/player.c:676
@@ -1686,7 +1686,7 @@ msgid "Development Card"
 msgstr "Akční karta"
 
 #: ../client/gtk/monopoly.c:104
-msgid "Select the resource you wish to monopolise."
+msgid "Select the resource you wish to monopolize."
 msgstr "Zvolte surovinu, kterou chcete monopolizovat"
 
 #: ../client/gtk/name.c:123
