--- a/branches/0_12_3/pioneers/po/sv.po
+++ b/branches/0_12_3/pioneers/po/sv.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Pioneers 0.12.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-09-26 10:18+0200\n"
+"POT-Creation-Date: 2010-09-27 08:02+0200\n"
 "PO-Revision-Date: 2010-03-28 01:26+0000\n"
 "Last-Translator: Daniel Nylander <yeager@ubuntu.com>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
@@ -724,7 +724,7 @@ msgstr "%s tog bort en bro.\n"
 
 #: ../client/common/player.c:673
 #, c-format
-msgid "%s has cancelled a ship's movement.\n"
+msgid "%s has canceled a ship's movement.\n"
 msgstr "%s har avbrutit flyttning av ett skepp.\n"
 
 #: ../client/common/player.c:676
@@ -1691,7 +1691,7 @@ msgid "Development Card"
 msgstr "Utvecklingskort"
 
 #: ../client/gtk/monopoly.c:104
-msgid "Select the resource you wish to monopolise."
+msgid "Select the resource you wish to monopolize."
 msgstr "Välj den resurs du önskar monopolisera."
 
 #: ../client/gtk/name.c:123
