--- a/branches/debian-release-14.1-3/po/pt_BR.po
+++ b/branches/debian-release-14.1-3/po/pt_BR.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pioneers 0.12.5-1\n"
 "Report-Msgid-Bugs-To: pioneers@packages.debian.org\n"
-"POT-Creation-Date: 2011-11-24 10:51+0100\n"
+"POT-Creation-Date: 2014-12-21 01:02+0100\n"
 "PO-Revision-Date: 2012-02-20 16:23-0200\n"
 "Last-Translator: J.S.Júnior <dgjunior4@hotmail.com>\n"
 "Language-Team: Brazilian Portuguese <debian-l10n-portuguese@lists.debian."
@@ -20,17 +20,25 @@ msgstr ""
 #. Type: string
 #. Description
 #: ../pioneers-meta-server.templates:1001
-msgid "Port range for creating new games on the meta-server:"
+#, fuzzy
+#| msgid "Port range for creating new games on the meta-server:"
+msgid "Port range for creating new games on the metaserver:"
 msgstr "Intervalo de portas para a criação de novos jogos no meta-servidor:"
 
 #. Type: string
 #. Description
 #: ../pioneers-meta-server.templates:1001
+#, fuzzy
+#| msgid ""
+#| "The meta-server can create new games, so players don't need to install "
+#| "and run the pioneers server. The ports which are used for these games can "
+#| "be specified. If this field is left empty, the meta-server will disable "
+#| "its game creation functionality."
 msgid ""
-"The meta-server can create new games, so players don't need to install and "
+"The metaserver can create new games, so players don't need to install and "
 "run the pioneers server. The ports which are used for these games can be "
-"specified. If this field is left empty, the meta-server will disable its "
-"game creation functionality."
+"specified. If this field is left empty, the metaserver will disable its game "
+"creation functionality."
 msgstr ""
 "O meta-servidor pode criar novos jogos, por isso os jogadores não precisam "
 "instalar e executar o servidor pioneers. As portas que são utilizadas para "
@@ -56,8 +64,13 @@ msgstr "Nome do servidor para jogos criados:"
 #. Type: string
 #. Description
 #: ../pioneers-meta-server.templates:2001
+#, fuzzy
+#| msgid ""
+#| "In some cases, the name the meta-server uses for itself when creating new "
+#| "games is incorrect. If this field is not left empty, it is used to "
+#| "override the detected hostname."
 msgid ""
-"In some cases, the name the meta-server uses for itself when creating new "
+"In some cases, the name the metaserver uses for itself when creating new "
 "games is incorrect. If this field is not left empty, it is used to override "
 "the detected hostname."
 msgstr ""
@@ -68,17 +81,25 @@ msgstr ""
 #. Type: string
 #. Description
 #: ../pioneers-meta-server.templates:3001
-msgid "Extra arguments to pass to the meta-server:"
+#, fuzzy
+#| msgid "Extra arguments to pass to the meta-server:"
+msgid "Extra arguments to pass to the metaserver:"
 msgstr "Argumentos extra para passar para o meta-servidor:"
 
 #. Type: string
 #. Description
 #: ../pioneers-meta-server.templates:3001
+#, fuzzy
+#| msgid ""
+#| "These arguments are passed to the meta-server. There are only two "
+#| "sensible arguments:\n"
+#| " * --syslog-debug: Send debugging output to syslog\n"
+#| " * --redirect: Redirect clients to another meta-server"
 msgid ""
-"These arguments are passed to the meta-server. There are only two sensible "
+"These arguments are passed to the metaserver. There are only two sensible "
 "arguments:\n"
-" * --syslog-debug: Send debugging output to syslog\n"
-" * --redirect: Redirect clients to another meta-server"
+" * --debug: Send debugging output to a logfile\n"
+" * --redirect: Redirect clients to another metaserver"
 msgstr ""
 "Estes argumentos são passados para o meta-servidor. Há apenas dois "
 "argumentos sensíveis:\n"
