--- a/branches/debian-release-14.1-3/po/nl.po
+++ b/branches/debian-release-14.1-3/po/nl.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.12.4-1\n"
 "Report-Msgid-Bugs-To: pioneers@packages.debian.org\n"
-"POT-Creation-Date: 2014-12-21 01:02+0100\n"
+"POT-Creation-Date: 2014-12-21 01:28+0100\n"
 "PO-Revision-Date: 2008-05-25 09:22+0200\n"
 "Last-Translator: Bas Wijnen <wijnen@debian.org>\n"
 "Language-Team: nl <debian-l10n-dutch@lists.debian.org>\n"
@@ -77,12 +77,12 @@ msgstr "Extra argumenten voor de meta-server:"
 msgid ""
 "These arguments are passed to the metaserver. There are only two sensible "
 "arguments:\n"
-" * --debug: Send debugging output to a logfile\n"
+" * --syslog-debug: Send debugging output to syslog\n"
 " * --redirect: Redirect clients to another metaserver"
 msgstr ""
 "Deze argumenten worden meegegeven aan de meta-server. Er zijn twee zinnige "
 "argumenten:\n"
-" * --debug: Stuur debug-uitvoer naar een bestand.\n"
+" * --syslog-debug: Stuur debug-uitvoer naar het systeemlogboek.\n"
 " * --redirect: Verwijs clients naar een andere meta-server."
 
 #~ msgid "Run the pioneers meta-server?"
