Removed scrollkeeper. Fixes Debian bug 885613

--- a/pioneers/debian/changelog
+++ b/pioneers/debian/changelog
@@ -2,6 +2,7 @@ pioneers (15.5-1~local1) UNRELEASED; urgency=medium
 
   * pioneers-builddep updated.
   * Removed dependency on libgnome (closes: #890465)
+  * Removed dependency on scrollkeeper (closes: #885613)
   * Waiting for new upstream release.
 
  -- Roland Clobus <rclobus@rclobus.nl>  Thu, 15 Sep 2016 22:01:01 +0200
